Changelog
=========

All notable changes to this project will be documented in this file.

The format is based on `Keep a Changelog <http://keepachangelog.com>`_ and this
project adheres to `Semantic Versioning <http://semver.org/spec/v2.0.0.html>`_.

Unreleased_
-----------

v0.4.5_ - 2019-02-22
--------------------

Fixed
'''''
- Support all ``fs`` versions under `3.0`.

v0.4.4_ - 2019-02-11
--------------------

Changed
'''''''
- Add ``2.3.0`` to the supported ``fs`` versions.

v0.4.3_ - 2019-01-06
--------------------

Changed
'''''''
- Add ``2.2.0`` to the supported ``fs`` versions.

Added
'''''
- Add ``Item.record`` shortcut to ``Item.entity.record`` in ``moclo.registry``.
- Make ``moclo.core`` abstract classes check for illegal sites in sequence to
  be identified as *valid*.
- This *CHANGELOG* file.

Documented
''''''''''
- Fix typos.


v0.4.2_ - 2018-08-16
--------------------

Fixed
'''''
- Some registries not loading ``CircularRecord`` instances.


v0.4.1_ - 2018-08-16
--------------------

Changed
'''''''
- Bump required ``fs`` version to ``2.1.0``.


v0.4.0_ - 2018-08-10
--------------------

Added
'''''
- ``AbstractPart.characterize`` to load a record into a part instance.
- Option to include / exclude ``ELabFTWRegistry`` items using tags.


v0.3.0_ - 2018-08-07
--------------------

Added
'''''
- Annotate assembled vectors as *circular* in ``AbstractVector.assemble``.
- *eLabFTW* registry connector in ``moclo.registry.elabftw``.

Changed
'''''''
- Move ``Item._find_type`` to public function ``moclo.registry.utils.find_type``.
- Improve annotation generated in ``AbstractVector.assemble``.

Fixed
'''''
- ``AbstractPart`` subclasses not being recognized as abstract.


v0.2.1_ - 2018-07-27
--------------------

Added
'''''
- ``moclo.registry.utils`` module with resistance idenfication function.
- Make ``AbstractVector.assemble`` add an alphabet to the generated sequence.

Documented
''''''''''
- Improved ``README.rst`` file.


v0.2.0_ - 2018-07-24