@@ -10,8 +10,8 @@ the module, as well as the chosen MoClo protocol.
 
 import typing
 
-import cached_property
 from Bio.Seq import Seq
+from property_cached import cached_property
 
 from .. import errors
 from ._structured import StructuredRecord
@@ -108,7 +108,7 @@ class AbstractModule(StructuredRecord):
             start, end = self._match.span(1)[0], self._match.span(2)[1]
         return add_as_source(self.record, (self.record << start)[: end - start])
 
-    @cached_property.cached_property
+    @cached_property
     def _match(self):
         _match = super(AbstractModule, self)._match
         if len(self.cutter.catalyse(_match.group(0).seq)) > 3:
