@@ -37,7 +37,7 @@ setup_requires =
   setuptools >=39.2
 install_requires =
   biopython ~=1.71
-  cached-property ~=1.4
+  property-cached ~=1.4
   fs ~=2.1
   six ~=1.10
   typing ~=3.6           ; python_version < '3.6'
